crates/lyra-tests/tests/snapshots/corpus__lrm__25__25.7.2__tasks_in_modports__modport_tf_gating.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type[38]] 24:8..24:8: member `Write` is not accessible through this modport
  error[lyra.type[38]] 26:8..26:8: member `Reset` is not accessible through this modport
---
unit (0 diagnostics)
