crates/lyra-tests/tests/snapshots/corpus__lrm__25__25.7.2__tasks_in_modports__prototype_mismatch_arity.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.prototype_mismatch] 11:16..11:16: prototype signature does not match declaration of `Read`: prototype has 2 ports but declaration has 1
---
unit (0 diagnostics)
