crates/lyra-tests/tests/snapshots/corpus__lrm__25__25.7.2__tasks_in_modports__prototype_mismatch_return.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.prototype_mismatch] 11:24..11:24: prototype signature does not match declaration of `Status`: return type mismatch
---
unit (0 diagnostics)
